크록스 클론코딩

--- a/crocs/index.html
+++ b/crocs/index.html
@@ -1,29 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>크록스 코리아 공식 홈페이지 | 크록스 공식 온라인 스토어</title>
-    <link rel="stylesheet" href="app.css">
-</head>
-<body>
+    <link rel="stylesheet" href="app.css" />
+  </head>
+  <body>
     <header>
-        <p>모든 신발 무료배송 | 무료반품,<br>
-            연말 배송 및 반품, 환불 지연 안내 자세히 보기</p>
-            <div class="header_items_list">
-                <ul>
-                    <li class="header_items"> <a href="">홀리데이 기프트 가이드</a></li>
-                    <li class="header_items"> <a href="">여성</a></li>
-                    <li class="header_items"> <a href="">키즈</a></li>
-                    <li class="header_items"> <a href="">지비츠™ 참 </a></li>
-                    <li class="header_items"> <a href="">세일</a></li>
-                    <li class="header_items"> <a href="">윅스(AT WORK)슈즈</a></li>
-                    <li class="header_items"> <a href="">COME AS YOU ARE™</a></li>
-                </ul>
-            </div>
-        </header>
-    <main>메인</main>
-    <footer>하단</footer>
-</body>
+      <p>
+        모든 신발 무료배송 | 무료반품,<br />
+        연말 배송 및 반품, 환불 지연 안내 자세히 보기
+      </p>
+      <div class="logo">
+        <img
+          src="C:\Users\YSH\Desktop\Clone_Coding\crocs\img\logo-no-tag.svg"
+          alt=""
+        />
+        <span class="Crocs"></span>
+      </div>
+      <div class="list">
+        <ul>
+          <li>
+            <button class="holiday">홀리데이 기프트 가이드</button>
+          </li>
+          <li>여성</li>
+          <li>남성</li>
+          <li>키즈</li>
+          <li>지비츠참</li>
+          <li>세일</li>
+          <li>왁스</li>
+          <li>come as you are</li>
+        </ul>
+      </div>
+      <div class="icons">
+        <input type="search" placeholder="키워드로 검색" />
+        <i class="fa-light fa-heart"></i>
+        <i class="fa-solid fa-cart-shopping"></i>
+      </div>
+    </header>
+    <main>
+      <section class="softside">
+        <img class="crocs_5" src="img/crocs (5).png" alt="" />
+        <img class="crocs_15" src="img/crocs (15).png" alt="" />
+      </section>
+      <section class="shopping"></section>
+      <section class="show"></section>
+      <section class="sale_zone"></section>
+      <section class="shine"></section>
+      <section class="bitz_select"></section>
+      <section class="coupon"></section>
+      <section class="style"></section>
+    </main>
+    <footer>
+      <section class="delivery"></section>
+      <section class="information"></section>
+    </footer>
+  </body>
 </html>
