--- a/youtube/index.html
+++ b/youtube/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Youtube 클론코딩</title>
 </head>
 <body>
-    
+    <!-- 4개의 상자를 나눴으니 상자를 먼저 만든다. -->
+    <!-- 시멘틱 태그 이용하는 것이 중요하다 -->
+    <header>
+        <div class="logo">
+            <div class="logo">
+                <i class="fab fa-youtube"></i>
+                <span class="title">Youtube</span>
+            </div>
+        </div>
+        <div class="icons"></div>
+    </header>
+    <section class="player"></section>
+    <section class="info"></section>
+    <section class="upNext"></section>
 </body>
 </html>
